--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,9 +16,10 @@
       <option value="ia">Questions AI</option>
       <option value="random">Questions Random</option>      
     </select>
+   
     <label for="category-select">Select Category:</label>
     <select id="category-select" name="category">
-      <option value="all">All Categories</option> '', '', '', '', '', '', '', '', '', '', '', '', ''
+      <option value="all">All Categories</option> 
       <option value="rest-api">rest-api</option>
       <option value="php">php</option>
       <option value="python">python</option>
@@ -35,14 +36,18 @@
     <label for="question-count">Number of Questions:</label>
     <div class="count">     
       <input type="number" id="question-count" name="question-count" placeholder="Enter a number">   
-      <button id="generateQuestions">Questions</button>      
+      <button id="generateQuestions">Submit</button>      
       <div id="spinner" class="spinner"></div>
     </div>  
+    <div class="apiurl">   
+      <input type="text" id="apiurl" placeholder="codeQuestApi">
+    </div>
   </div>
   <div class="tab-container">
     <button class="tab-button active" data-target="#questions-containerapi">Json</button>
     <button class="tab-button" data-target="#questions-container">Questions</button>
   </div>
+  
   <div class="tab-content">
     <div class="questions-container active" id="questions-containerapi">
       <pre id="output"></pre>
@@ -51,6 +56,7 @@
       <!-- Aquí se mostrarán las preguntas con formato -->
     </div>
   </div>
+
   <script src="index.js"></script>
 </body>
 </html>
