--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
-
+  
   <h1>Questions List From Code Quest</h1>
   <div class="form-container">
     <label for="api-select">Select Api:</label>
@@ -41,11 +41,12 @@
     </div>  
     <div class="apiurl">   
       <input type="text" id="apiurl" placeholder="codeQuestApi">
-    </div>
+      
+    </div>  
   </div>
   <div class="tab-container">
     <button class="tab-button active" data-target="#questions-containerapi">Json</button>
-    <button class="tab-button" data-target="#questions-container">Questions</button>
+    <button class="tab-button" data-target="#questions-container">Css-formatted Json</button>
   </div>
   
   <div class="tab-content">
