--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,12 +11,12 @@
   
   <h1>Questions List From Code Quest</h1>
   <div class="form-container">
-    <label for="api-select">Select Api:</label>
-    <select id="api-select" name="category">  
+    <label for="api-select">Api</label>
+    <!-- <select id="api-select" name="category">  
       <option value="ia">Questions AI</option>
       <option value="random">Questions Random</option>      
-    </select>
-   
+    </select> -->
+    <input type="text" id="api-select" value="https://codequestapi.onrender.com/api/v1/questions/">
     <label for="category-select">Select Category:</label>
     <select id="category-select" name="category">
       <option value="all">All Categories</option> 
