--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,11 +12,9 @@
   <h1>Questions List From Code Quest</h1>
   <div class="form-container">
     <label for="api-select">Api</label>
-    <!-- <select id="api-select" name="category">  
-      <option value="ia">Questions AI</option>
-      <option value="random">Questions Random</option>      
-    </select> -->
-    <input type="text" id="api-select" value="https://codequestapi.onrender.com/api/v1/questions/">
+    <div class="apiurl">
+      <input type="text" id="api-select" value="https://codequestapi.onrender.com/api/v1/questions/">
+    </div>
     <label for="category-select">Select Category:</label>
     <select id="category-select" name="category">
       <option value="all">All Categories</option> 
